--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@gsap/react": "^2.1.2",
+    "@react-three/drei": "^9.56.14",
+    "@react-three/fiber": "^8.13.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^10.4.0",
     "framer-motion": "^10.6.0",
+    "gsap": "^3.13.0",
     "next": "13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^10.3.1",
+    "tailwind": "^4.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^18.2.22",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.30",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
