--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
+    "@netlify/plugin-nextjs": "^5.13.0",
     "@react-three/drei": "^9.56.14",
     "@react-three/fiber": "^8.13.5",
     "eslint": "8.36.0",
