--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "firebase": "^10.4.0",
     "framer-motion": "^10.6.0",
     "gsap": "^3.13.0",
-    "next": "13.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "swiper": "^10.3.1",
     "tailwind": "^4.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
